--- a/Works/RGMS07-24Task3/.classpath
+++ b/Works/RGMS07-24Task3/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="poi-ooxml-schemas-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="lib" path="poi-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="rs2xml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
